--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -15,7 +15,7 @@ subnav:
   segmentfault: https://segmentfault.com/u/aric_sky
   #bilibili: "#"
   #acfun: "#"
-  #mail: wangyuanqi518@163.com
+  mail: mailto://wangyuanqi518@163.com
   #facebook: "#"
   #google: "#"
   #twitter: "#"
@@ -85,6 +85,9 @@ mobile:
 #4、Disqus 在hexo根目录的config里也有disqus_shortname字段，优先使用yilia的
 disqus: false
 
+#5、友言
+uyan: '2157287'
+
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
   # 头像上面的背景颜色
@@ -103,11 +106,22 @@ slider:
 #  friends: false
 smart_menu:
   innerArchive: '所有文章'
-  friends: false
+  friends: '友链'
   aboutme: '关于我'
 
 friends:
-  JuniperPhoton: http://juniperphoton.net/
-  yazoo: http://yazhuo.github.io/
+  Factory: wangyuanqi.leanapp.cn
+
 
 aboutme: I like codding bug !
+
+#leancloud
+leancloud_visitors:
+  enable: true
+  app_id: MaWKKnTCPQkl8zu6Ao9qij6A-gzGzoHsz
+  app_key: qEIdCWy73vw1uzMzDC8F9jIt
+
+#添加一下js插件的 CDN地址
+js_cdn:
+  jquery: https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js
+  av : //cdn1.lncld.net/static/js/2.5.0/av-min.js
