--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Aric's blog
-subtitle: 明天不见得会多好，但是起码不会太差。
+subtitle: 明天不见得会多好<br/>但是起码不会太差
 description: From small beginnings comes great things
 author: Aric
 email: wangyuanqi518@163.com
