--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -2,8 +2,9 @@
 
 menu:
   主页: /
+  前端: /tags/前端
   后端: /tags/后端
-  技术: /tags/技术
+  周边技术: /tags/周边技术
 
 # SubNav
 subnav:
@@ -26,7 +27,7 @@ rss: /atom.xml
 # 是否需要修改 root 路径
 # 如果您的网站存放在子目录中，例如 http://yoursite.com/blog，
 # 请将您的 url 设为 http://yoursite.com/blog 并把 root 设为 /blog/。
-root: 
+root: /
 
 # Content
 excerpt_link: 'more'
