--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -36,10 +36,10 @@ mathjax: false
 
 # 打赏
 # 打赏type设定：0-关闭打赏； 1-文章对应的md文件里有reward:true属性，才有打赏； 2-所有文章均有打赏
-reward_type: 0
-reward_wording: '谢谢你请我吃糖果'
-alipay: /assets/img/alipay.jpg
-weixin: /assets/img/weixin.jpg
+reward_type: 2
+reward_wording: '帮助楼主迎娶白富美'
+alipay: /assets/images/pay/alipay.jpg
+weixin: /assets/images/pay/weixin.jpg
 
 # 目录
 # 目录设定：0-不显示目录； 1-文章对应的md文件里有toc:true属性，才有目录； 2-所有文章均显示目录
