--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -110,10 +110,10 @@ smart_menu:
   aboutme: '关于我'
 
 friends:
-  Factory: wangyuanqi.leanapp.cn
+  Aric-Factory: wangyuanqi.leanapp.cn
 
 
-aboutme: I like codding bug !
+aboutme: I Like Codding Bug !
 
 #leancloud
 leancloud_visitors:
