--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -79,14 +79,14 @@ mobile:
 #wangyiyun: '2dba06fbf8d24c13915ea6c6aa7183b1'
 
 #3、畅言
-# changyan_appid: 'cysX3aGWt'
-# changyan_conf: 'prod_1dcda447175aada96edcdb7e412338fa'
+ changyan_appid: 'cysX3aGWt'
+ changyan_conf: 'prod_1dcda447175aada96edcdb7e412338fa'
 
 #4、Disqus 在hexo根目录的config里也有disqus_shortname字段，优先使用yilia的
-disqus: false
+# disqus: false
 
 #5、友言
-uyan: '2157287'
+# uyan: '2157287'
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
