--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: Aaron's blog
-subtitle: 慢慢正能量<br/>
+subtitle: 满满正能量<br/>
 description: From small beginnings comes great things
 author: Aaron
 email: wangyuanqi518@163.com
