--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -12,7 +12,7 @@ subnav:
   #psn: "#"
   #zhihu: "#"
   #douban: "#"
-  segmentfault: https://segmentfault.com/u/aric_sky
+  segmentfault: https://segmentfault.com/u/wangyuanqi
   #bilibili: "#"
   #acfun: "#"
   mail: mailto://wangyuanqi518@163.com
