--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -123,5 +123,5 @@ leancloud_visitors:
 
 #添加一下js插件的 CDN地址
 js_cdn:
-  jquery: https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js
+  jquery: https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js
   av : //cdn1.lncld.net/static/js/3.0.4/av-min.js
